video spacing fixed

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -110,6 +110,7 @@ body {
 
 .teaser {
   font-family: 'Inter', sans-serif;
+  margin-top: -6.5rem;
 }
 
 
@@ -148,7 +149,7 @@ body {
 .publication-authors {
     font-family: 'Inter', sans-serif !important;
     font-weight: 500;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
